--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício HTML</title>
+    <title>Exercício HTML</title>   
 </head>
 <body>
     <h1>Formulário de cadastro</h1>
     <br />
-    <label for="nomeresp">Nome: </label><input type="text" id="nomeresp"/>
-    <br />
-    <label for="emailresp">E-mail: </label><input type="email" id="emailresp"/>
-    <br />
-    <label for="senharesp">Senha: </label><input type="password" id="senharesp"/>
-    <br />
-    <button type="submit">Cadastrar</button>
+    <form>
+        <label for="nomeresp">Nome: </label><input type="text" id="nomeresp"/>
+        <br />
+        <label for="emailresp">E-mail: </label><input type="email" id="emailresp"/>
+        <br />
+        <label for="senharesp">Senha: </label><input type="password" id="senharesp"/>
+        <br />
+        <button class="botao" type="submit">Cadastrar</button>
+    </form>
 </body>
 </html>
